@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e0ce5cbe6003ae67068015fa031f72d98b0f455b ChangeLog
+SHA1 c0c3406ccb330e12aa8a1f8c34f53463f8d8026c ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2c47234815d7762d27b0de69a1610dcf811aa740 MANIFEST
-SHA1 f916303d84fba43e356813193b338d5868ffb6a8 META.yml
-SHA1 19f34cb3b1e977170a929de77541ec90cbb54fb2 Makefile.PL
+SHA1 de92086a30d1ddefe299796df77b30ce07a76c26 META.yml
+SHA1 891de61f9de3e77ef1f74953a03c4eb83b253ddb Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 a4e74085a37fdd9bfe221786b335f0c7662cbc46 bin/fullauto.pl
@@ -35,7 +35,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 260b79c68ee515cdaab9182ee6c6f0743ea9541d lib/Net/FullAuto.pm
+SHA1 1bec6b58bcfe56a34dbe930430213c09a334315b lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 3dba6317f994a5d42a6f45f959a7829aba92e242 lib/Net/FullAuto/Distro/fa_code.pm
@@ -51,7 +51,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk5SWLsACgkQdsVAdUjO9InRZACfUUk+37x9vGaOYMzk0a6zblNJ
-C48AoKtZqK2Eurvvvbjv5sp5SpBN4tBu
-=BxOI
+iEYEARECAAYFAk5S5eUACgkQdsVAdUjO9InR/wCeJEyL5Obpx+kARzcnSc6p4Fb0
+4DEAnRbR5wMkHoWMMkvykkOGh0+q7SkF
+=EmxF
 -----END PGP SIGNATURE-----
