@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9963';
+our $VERSION='0.9964';
 
 
 use 5.005;
